--- a/index.html
+++ b/index.html
@@ -1,78 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classic Hip-Hop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-
-<body class="p-3">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <nav>
-                <ul class="nav nav-tabs">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="./products.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./checkout.html">Checkout</a></li>
-                </ul>
-            </nav>
-        </div>
+      <span id="logo">
+        <a href="/">Turn Up Hip Hop </a>
+      </span>
+      <nav>
+        <ul>
+          <li>
+            <a href="feed.html">Thoughts</a>
+          </li>
+          <li>
+            <a href="">Watch</a>
+          </li>
+          <li>
+            <a href="">Listen</a>
+          </li>
+          <li>
+            <a href="">Read</a>
+          </li>
+        </ul>
+      </nav>
+      <span id="account">
+        <!-- <a href="#account">Account</a> -->
+      </span>
     </header>
     <main>
-        <section>
-
-            <div class="container col-xxl-8 px-4 py-5">
-                <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                    <div class="col-10 col-sm-8 col-lg-6">
-
-                        <img class="d-block mx-lg-auto img-fluid" width="700" height="500"
-                            src="https://via.placeholder.com/700x500.png/09f/fff" alt="main hero image">
-                    </div>
-                    <div class="col-lg-6">
-                        <h1 class="display-5 fw-bold lh-1 mb-3">Responsive left-aligned hero with image</h1>
-                        <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the
-                            world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
-                            responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-                        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-                            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </section>
+      <section class="background-mixtapes home">
+        <div class="background-mixtapes-text">
+          <h3>Classic Hip Hop Curated Content</h3>
+        </div>
+      </section>
+      <section class="background-graph-paper home split">
+        <img
+          height="300px"
+          width="400px"
+          id="master-ace-bizmarkie-puppet"
+          src="/images/master-ace-bizmarkie-puppet.jpg"
+          alt="Master Ace with Bizmarkie Puppet"
+        />
+        <div>
+          <h4>Old School Rules</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
+            libero doloribus, tenetur nostrum?
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
+            libero doloribus, tenetur nostrum?
+          </p>
+        </div>
+      </section>
+      <section class="gradient-accent home">
+        <div class="text-center">
+          <h2>Curated Classic Hip Hop Content</h2>
+          <div>Curated content from around the internet. No news.</div>
+        </div>
+      </section>
+      <section class="text-image home split">
+        <article>
+          <h4>Old School Rules</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
+            libero doloribus, tenetur nostrum?
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
+            libero doloribus, tenetur nostrum?
+          </p>
+        </article>
+        <img
+          id="ultra-image"
+          src="images/ultramagnetic-mcs-jacket.jpg"
+          alt="Ultramagnetic MCs Jacket"
+          height="400px"
+          width="300px"
+        />
+      </section>
+      <footer>
+        <span>&copy; 2023 Funny Ant, LLC</span>
+      </footer>
     </main>
-    <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <div class="col-md-4 d-flex align-items-center">
-                <span class="mb-3 mb-md-0 text-muted">© 2022 Company, Inc</span>
-            </div>
-
-            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-                            <use xlink:href="./images/bootstrap-icons.svg#twitter"></use>
-                        </svg></a></li>
-                <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-                            <use xlink:href="./images/bootstrap-icons.svg#instagram"></use>
-                        </svg></a></li>
-                <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-                            <use xlink:href="./images/bootstrap-icons.svg#facebook"></use>
-                        </svg></a></li>
-            </ul>
-        </footer>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
-
-</body>
-
+  </body>
 </html>
