--- a/feed.html
+++ b/feed.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News</title>
-    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <!-- art*12>figure>img[src=https://placehold.co/200x200.png]+h2>lorem6-->
     <!-- art*12>figure>img+h2>lorem6 -->
   </head>
   <body>
+    <header>
+      <span id="logo">
+        <a href="/">Turn Up Hip Hop </a>
+      </span>
+      <nav>
+        <ul>
+          <li>
+            <a class="active" href="feed.html">Thoughts</a>
+          </li>
+          <li>
+            <a href="">Watch</a>
+          </li>
+          <li>
+            <a href="">Listen</a>
+          </li>
+          <li>
+            <a href="">Read</a>
+          </li>
+        </ul>
+      </nav>
+      <span id="account">
+        <!-- <a href="#account">Account</a> -->
+      </span>
+    </header>
     <main class="bg-neutral">
       <div class="container">
         <h1>Hip Hop Thoughts</h1>
@@ -123,6 +147,9 @@
           </article>
         </section>
       </div>
+      <footer>
+        <span>&copy; 2023 Funny Ant, LLC</span>
+      </footer>
     </main>
   </body>
 </html>
