adjust font sizes

--- a/feed.html
+++ b/feed.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>News</title>
+    <title>Hip Hop Thoughts</title>
     <link rel="stylesheet" href="/css/styles.css" />
     <!-- art*12>figure>img[src=https://placehold.co/200x200.png]+h2>lorem6-->
     <!-- art*12>figure>img+h2>lorem6 -->
