--- a/feed.html
+++ b/feed.html
@@ -38,8 +38,8 @@
             <figure>
               <img src="https://placehold.co/200x200.png" alt="" />
             </figure>
-            <div>
-              <h2>Lorem ipsum dolor sit amet consectetur</h2>
+            <div> 
+              <h2><a href="post.html">Lost Recordings from 1988</a></h2>
               <div class="read-time">3 min read</div>
             </div>
           </article>
