format first article

--- a/post.html
+++ b/post.html
@@ -30,49 +30,95 @@
     </header>
     <main class="bg-neutral">
       <div class="post container">
-        <h1>Lost Recordings from 1988</h1>
+        <h1>Unreleased Material from Hip Hop Legends</h1>
         <section class="post bg-light">
+          <h2>Top Shelf 1988</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum
-            error libero iusto inventore facere fugit alias reprehenderit aut
-            laudantium fugiat in, nisi nesciunt suscipit vitae asperiores, illo
-            iste animi at! Aperiam impedit sint ullam atque, ratione ad saepe
-            quae qui. Architecto perspiciatis sed dolore deleniti. Molestias
-            molestiae soluta veritatis neque magnam tenetur, cupiditate
-            asperiores omnis quis iusto corporis, porro sunt sit ullam amet?
-            Odit doloremque rerum deleniti ab libero illo quaerat quae veniam
-            tenetur id, eum aut quibusdam incidunt, consequuntur nisi cum
-            praesentium, ea numquam cupiditate odio eveniet suscipit harum
-            repellat. Fugiat rerum eos consectetur eius obcaecati saepe
-            officiis? Doloremque quam voluptatum, dolore, illo nemo ipsam et
-            quae, sint minus earum ipsum nostrum commodi enim fugit provident
-            blanditiis suscipit vero. Vero, voluptates maxime et doloribus iure
-            qui dolor provident aut quos reprehenderit blanditiis porro
-            suscipit, iste alias, sed quas. Dolorem accusamus commodi atque vero
-            aperiam corrupti, aliquid nam culpa recusandae veritatis, placeat,
-            animi deserunt. Quisquam vel consequatur inventore odit eius dolorem
-            adipisci rem, cum similique. Commodi fugit quaerat, perferendis ex
-            reprehenderit ut natus dolor deserunt! Pariatur dignissimos aliquid
-            ipsum facilis sit? Nesciunt, dolorem molestias modi ab rem atque
-            corporis quia, nemo adipisci numquam deserunt maiores porro,
-            obcaecati iusto illum. Aut quasi nostrum vero molestias aliquam est
-            error. Perspiciatis rerum ipsa fuga, reiciendis in quia dolore error
-            at quas laboriosam aperiam tempore architecto voluptate est voluptas
-            excepturi tempora molestias incidunt quasi sunt velit dicta ipsam?
-            Ut accusamus nihil assumenda deserunt asperiores! Doloremque, sint
-            nisi cumque assumenda, saepe numquam, nesciunt voluptatibus velit a
-            reprehenderit nostrum consectetur veniam optio? Accusamus,
-            accusantium? Veniam eius, atque voluptatem voluptate animi repellat
-            ex aliquam beatae nemo ipsa odio optio aperiam sint laborum
-            obcaecati excepturi, asperiores quisquam quia ab magnam numquam
-            sequi inventore. Ea, sunt similique. Omnis officiis ducimus nihil
-            ipsum voluptatum aut animi tempora. Rem numquam voluptatem cum
-            repellendus aperiam ipsa excepturi deleniti nisi. Quasi consequatur,
-            fugit id similique obcaecati mollitia ab reiciendis officiis? Maxime
-            rem odio doloribus molestias ad, obcaecati, sapiente explicabo
-            provident minus veritatis excepturi, omnis impedit totam. Fuga esse,
-            maiores quibusdam fugit natus suscipit dolorem repellendus iusto
-            soluta! Autem excepturi consectetur ea dolorem? Pariatur.
+            I was excited to find out there was an album released with lost
+            recordings of many of my favorite rappers from 1988. Listening to
+            <a target="_blank" href="https://topshelf1988.com/"
+              >"Top Shelf 1988"</a
+            >
+            had me feeling so nostalgic and happy. It was in heavy rotation for
+            weeks.
+          </p>
+          <blockquote>
+            In particular, Big Daddy Kane's song felt like Rick Rubin had
+            created the beat. And I swore Kane's voice sounded like it did on
+            "Long Live the Kane" and "It's a Big Daddy thing" before his voice
+            deepened.
+          </blockquote>
+          <p>
+            I was wrong. But I don't care. Thank you Rostrum Records. Like a kid
+            who likes to watch a scary movie because of how it makes them feel
+            even if it's pretend. I loved it.
+          </p>
+
+          <h2>Bottom Line</h2>
+          <p>
+            The beats are so golden era hip hop. It feels as if "it's 88, time
+            to set 'em straight".
+          </p>
+          <ul>
+            <li>Biz is indistinguishable from his Cold Chillin era.</li>
+            <li>
+              The Craig G beat could be on his "Kingpin" album or "Marley Marl's
+              In Control".
+            </li>
+            <li>Special Ed's flow is reminiscent of "Think About It".</li>
+            <li>
+              MC Lyte sounds like she is flowing over a King of Chill beat...you
+              get the idea.
+            </li>
+          </ul>
+
+          <h2>The Lost Tapes</h2>
+          <p>The story of how the recordings were lost goes as follows:</p>
+          <p>
+            A studio named Top Shelf was a popular recording destination for rap
+            artists in the late 80s. The studio was looted during the Tompkins
+            Square Park riots and all these recordings were taken. The
+            recordings were found years later and are now being released.
+          </p>
+
+          <h2>The Truth</h2>
+          <p>
+            But it is not true. And again, I don't care. Honestly the truth
+            isn't far off.
+          </p>
+          <p>
+            The recordings were done in the 90s by an upstart label
+            <a
+              target="_blank"
+              href="https://en.wikipedia.org/wiki/Rostrum_Records"
+              >Rostrum Records</a
+            >
+            whose founders had a true love for hip hop and recorded artists over
+            the beats they had made which mimicked the sound of the period.
+            Rostrum Records couldn't get anyone to distribute the album in the
+            90s but ended up finding success with Wiz Khalifa and Mac Miller.
+            Years later the recordings have been released with a clever
+            publicity campaign about the lost recordings.
+          </p>
+
+          <h2>Check it Out</h2>
+
+          <p>
+            If you are a fan of golden age hip hop please go stream the album
+            immediately. You can stream it by searching for
+            <a
+              target="_blank"
+              href="https://open.spotify.com/album/5Sh0S2YPapK4JN0QCqBkI2"
+              >"Top Shelf 1988"
+            </a>
+            album on your favorite streaming platform. And for the whole
+            backstory watch the short
+            <a
+              target="_blank"
+              href="https://www.youtube.com/watch?v=dIEzV5gxH-w"
+              >Top Shelf 1988 (Documentary)</a
+            >
+            .
           </p>
         </section>
       </div>
