article images added

--- a/post.html
+++ b/post.html
@@ -33,6 +33,12 @@
         <h1>Unreleased Material from Hip Hop Legends</h1>
         <section class="post bg-light">
           <h2>Top Shelf 1988</h2>
+          <img
+            src="images/top-shelf-1988-album-cover.jpg"
+            alt="top shelf 1988 album cover"
+            height="600"
+            width="600"
+          />
           <p>
             I was excited to find out there was an album released with lost
             recordings of many of my favorite rappers from 1988. Listening to
@@ -60,7 +66,7 @@
             to set 'em straight".
           </p>
           <ul>
-            <li>Biz is indistinguishable from his Cold Chillin era.</li>
+            <li>Biz is indistinguishable from his Cold Chillin heyday.</li>
             <li>
               The Craig G beat could be on his "Kingpin" album or "Marley Marl's
               In Control".
@@ -71,6 +77,20 @@
               get the idea.
             </li>
           </ul>
+          <div style="display: flex; gap: 0.5em">
+            <img
+              src="images/top-shelf-1988-tshirt-front.jpg"
+              alt="Top Shelf 1988 T-Shirt Front"
+              width="400"
+              height="400"
+            />
+            <img
+              src="images/top-shelf-1988-tshirt-back.jpg"
+              alt="Top Shelf 1988 T-Shirt Back"
+              width="400"
+              height="400"
+            />
+          </div>
 
           <h2>The Lost Tapes</h2>
           <p>The story of how the recordings were lost goes as follows:</p>
@@ -120,6 +140,16 @@
             >
             .
           </p>
+          <br />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube-nocookie.com/embed/dIEzV5gxH-w"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </section>
       </div>
       <footer>
