--- a/feed.html
+++ b/feed.html
@@ -39,7 +39,7 @@
               <img src="https://placehold.co/200x200.png" alt="" />
             </figure>
             <div> 
-              <h2><a href="post.html">Lost Recordings from 1988</a></h2>
+              <h2><a href="post.html">Unreleased Material from Hip Hop Legends</a></h2>
               <div class="read-time">3 min read</div>
             </div>
           </article>
