--- a/post.html
+++ b/post.html
@@ -60,7 +60,7 @@
             even if it's pretend. I loved it.
           </p>
 
-          <h2>Bottom Line</h2>
+          <h2>The Beats Were Dope, The Sound Was On</h2>
           <p>
             The beats are so golden era hip hop. It feels as if "it's 88, time
             to set 'em straight".
