tweak ul styles

--- a/post.html
+++ b/post.html
@@ -47,12 +47,14 @@
             had me feeling so nostalgic and happy. It was in heavy rotation for
             weeks.
           </p>
-          <blockquote>
-            In particular, Big Daddy Kane's song felt like Rick Rubin had
-            created the beat. And I swore Kane's voice sounded like it did on
-            "Long Live the Kane" and "It's a Big Daddy thing" before his voice
-            deepened.
-          </blockquote>
+          <p>
+            <em>
+              In particular, Big Daddy Kane's song felt like Rick Rubin had
+              created the beat. And I swore Kane's voice sounded like it did on
+              "Long Live the Kane" and "It's a Big Daddy thing" before his voice
+              deepened.
+            </em>
+          </p>
           <p>
             I was wrong. But I don't care. Thank you Rostrum Records. Like a kid
             who likes to watch a scary movie because of how it makes them feel
@@ -102,8 +104,8 @@
 
           <h2>The Truth</h2>
           <p>
-            But it is not true. And again, I don't care. Honestly the truth
-            isn't far off.
+            But the story is not true. And again, I don't care. Honestly the
+            truth isn't far off.
           </p>
           <p>
             The recordings were done in the 90s by an upstart label
