post working on mobile

--- a/feed.html
+++ b/feed.html
@@ -30,7 +30,7 @@
         <!-- <a href="#account">Account</a> -->
       </span>
     </header>
-    <main class="feed bg-neutral">
+    <main class=" bg-neutral">
       <div class="container">
         <h1>Hip Hop Thoughts</h1>
         <section class="feed bg-light">
