--- a/post.html
+++ b/post.html
@@ -32,6 +32,7 @@
       <div class="post container">
         <section class="post bg-light">
           <img
+            class="img-full-width"
             src="images/top-shelf-1988-album-cover.jpg"
             alt="top shelf 1988 album cover"
             height="600"
@@ -80,16 +81,14 @@
           </ul>
           <div style="display: flex; gap: 0.5em">
             <img
+              class="img-half-width"
               src="images/top-shelf-1988-tshirt-front.jpg"
               alt="Top Shelf 1988 T-Shirt Front"
-              width="400"
-              height="400"
             />
             <img
+              class="img-half-width"
               src="images/top-shelf-1988-tshirt-back.jpg"
               alt="Top Shelf 1988 T-Shirt Back"
-              width="400"
-              height="400"
             />
           </div>
 
@@ -145,8 +144,7 @@
           </p>
           <br />
           <iframe
-            width="560"
-            height="315"
+            class="youtube-video"
             src="https://www.youtube-nocookie.com/embed/dIEzV5gxH-w"
             title="YouTube video player"
             frameborder="0"
