fix feed headings

--- a/post.html
+++ b/post.html
@@ -39,6 +39,7 @@
             width="600"
           />
           <h1>Unreleased Material from Hip Hop Legends</h1>
+          <div class="read-time">2 min read</div>
           <p>
             I was excited to find out there was an album released with lost
             recordings of many of my favorite rappers from 1988. Listening to
