--- a/feed.html
+++ b/feed.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hip Hop Thoughts</title>
     <link rel="stylesheet" href="/css/styles.css" />
-    <!-- art*12>figure>img[src=https://placehold.co/200x200.png]+h2>lorem6-->
-    <!-- art*12>figure>img+h2>lorem6 -->
   </head>
   <body>
     <header>
@@ -30,16 +28,24 @@
         <!-- <a href="#account">Account</a> -->
       </span>
     </header>
-    <main class=" bg-neutral">
+    <main class="bg-neutral">
       <div class="container">
         <h1>Hip Hop Thoughts</h1>
         <section class="feed bg-light">
           <article class="split">
             <figure>
-              <img src="https://placehold.co/200x200.png" alt="" />
+              <img
+                class="img-full-width"
+                src="images/top-shelf-1988-album-cover.jpg"
+                alt="top shelf 1988 album cover"
+                height="200"
+                width="200"
+              />
             </figure>
-            <div> 
-              <h2><a href="post.html">Unreleased Material from Hip Hop Legends</a></h2>
+            <div>
+              <h2>
+                <a href="post.html">Unreleased Material from Hip Hop Legends</a>
+              </h2>
               <div class="read-time">2 min read</div>
             </div>
           </article>
@@ -48,7 +54,7 @@
               <img src="https://placehold.co/200x200.png" alt="" />
             </figure>
             <div>
-              <h2>Doloremque consequuntur mollitia atque doloribus iure!</h2>
+              <h2>Coming Soon</h2>
               <div class="read-time">4 min read</div>
             </div>
           </article>
@@ -57,7 +63,7 @@
               <img src="https://placehold.co/200x200.png" alt="" />
             </figure>
             <div>
-              <h2>Sunt optio corporis suscipit maxime inventore!</h2>
+              <h2>Coming Soon</h2>
               <div class="read-time">2 min read</div>
             </div>
           </article>
@@ -66,80 +72,8 @@
               <img src="https://placehold.co/200x200.png" alt="" />
             </figure>
             <div>
-              <h2>Adipisci, accusamus tempore. Quaerat, recusandae porro?</h2>
+              <h2>Coming Soon</h2>
               <div class="read-time">7 min read</div>
-            </div>
-          </article>
-          <article class="split">
-            <figure>
-              <img src="https://placehold.co/200x200.png" alt="" />
-            </figure>
-            <div>
-              <h2>Omnis adipisci fugit nobis quia nulla?</h2>
-              <div class="read-time">3 min read</div>
-            </div>
-          </article>
-          <article class="split">
-            <figure>
-              <img src="https://placehold.co/200x200.png" alt="" />
-            </figure>
-            <div>
-              <h2>Odio non hic ex corrupti. Quidem</h2>
-              <div class="read-time">3 min read</div>
-            </div>
-          </article>
-          <article class="split">
-            <figure>
-              <img src="https://placehold.co/200x200.png" alt="" />
-            </figure>
-            <div>
-              <h2>Voluptatum animi facilis rerum dicta corrupti?</h2>
-              <div class="read-time">3 min read</div>
-            </div>
-          </article>
-          <article class="split">
-            <figure>
-              <img src="https://placehold.co/200x200.png" alt="" />
-            </figure>
-            <div>
-              <h2>Quos quas voluptas deserunt possimus dolores</h2>
-              <div class="read-time">3 min read</div>
-            </div>
-          </article>
-          <article class="split">
-            <figure>
-              <img src="https://placehold.co/200x200.png" alt="" />
-            </figure>
-            <div>
-              <h2>Nesciunt eveniet eligendi pariatur maxime facilis</h2>
-              <div class="read-time">3 min read</div>
-            </div>
-          </article>
-          <article class="split">
-            <figure>
-              <img src="https://placehold.co/200x200.png" alt="" />
-            </figure>
-            <div>
-              <h2>Deserunt aperiam culpa vel nisi minima!</h2>
-              <div class="read-time">3 min read</div>
-            </div>
-          </article>
-          <article class="split">
-            <figure>
-              <img src="https://placehold.co/200x200.png" alt="" />
-            </figure>
-            <div>
-              <h2>Iste ex voluptas a iure cum</h2>
-              <div class="read-time">3 min read</div>
-            </div>
-          </article>
-          <article class="split">
-            <figure>
-              <img src="https://placehold.co/200x200.png" alt="" />
-            </figure>
-            <div>
-              <h2>Tempore rem explicabo dolores animi facere</h2>
-              <div class="read-time">3 min read</div>
             </div>
           </article>
         </section>
