--- a/post.html
+++ b/post.html
@@ -51,21 +51,20 @@
           </p>
           <p>
             <em>
-              In particular, Big Daddy Kane's song felt like Rick Rubin had
-              created the beat. And I swore Kane's voice sounded like it did on
-              "Long Live the Kane" and "It's a Big Daddy thing" before his voice
-              deepened.
+              Big Daddy Kane's song felt like Rick Rubin had created the beat.
+              And I swore Kane's voice sounded like it did on "Long Live the
+              Kane" and "It's a Big Daddy thing" before his voice deepened.
             </em>
           </p>
           <p>
-            I was wrong. But I don't care. Thank you Rostrum Records. Like a kid
-            who likes to watch a scary movie because of how it makes them feel
-            even if it's pretend. I loved it.
+            I was wrong. But I don't care. Thank you, Rostrum Records. Like a
+            kid who likes to watch a scary movie because of how it makes them
+            feel even if it's make believe. I loved it.
           </p>
 
           <h2>The Beats Were Dope, The Sound Was On</h2>
           <p>
-            The beats are so golden era hip hop. It feels as if "it's 88, time
+            The beats are so golden-era hip hop. It feels as if "it's 88, time
             to set 'em straight".
           </p>
           <ul>
@@ -104,7 +103,7 @@
 
           <h2>The Truth</h2>
           <p>
-            But the story is not true. And again, I don't care. Honestly the
+            But the story is not true. And again, I don't care. Honestly, the
             truth isn't far off.
           </p>
           <p>
@@ -120,28 +119,26 @@
           <p>
             Rostrum Records couldn't get anyone to distribute the album in the
             90s but ended up finding success with Wiz Khalifa and Mac Miller.
-            Years later the recordings have been released with a clever
-            publicity campaign about the lost recordings.
+            Years later the lost recordings have now been released along with
+            the clever publicity campaign about the fictitious studio that was
+            impacted by the real-world riots.
           </p>
 
           <h2>Check it Out</h2>
 
           <p>
-            If you are a fan of golden age hip hop please go stream the album
-            immediately. You can stream it by searching for
+            If you are a fan of Golden Age hip hop please go stream the album
+            immediately. You can stream it by searching for the
             <a
               target="_blank"
               href="https://open.spotify.com/album/5Sh0S2YPapK4JN0QCqBkI2"
               >"Top Shelf 1988"
             </a>
-            album on your favorite streaming platform. And for the whole
-            backstory watch the short
-            <a
-              target="_blank"
-              href="https://www.youtube.com/watch?v=dIEzV5gxH-w"
-              >Top Shelf 1988 (Documentary)</a
-            >
-            .
+            album on your favorite streaming platform.
+          </p>
+          <p>
+            For the whole backstory watch the short Top Shelf 1988 (Documentary)
+            below.
           </p>
           <br />
           <iframe
@@ -158,5 +155,9 @@
         <span>&copy; 2023 Funny Ant, LLC</span>
       </footer>
     </main>
+
+    <script>
+      document.write(`<pre>${document.body.innerText}</pre>`);
+    </script>
   </body>
 </html>
