home page and rename first post

--- a/feed.html
+++ b/feed.html
@@ -44,7 +44,9 @@
             </figure>
             <div>
               <h2>
-                <a href="post.html">Unreleased Material from Hip Hop Legends</a>
+                <a href="unreleased-material-from-hip-hop-legends.html"
+                  >Unreleased Material from Hip Hop Legends</a
+                >
               </h2>
               <div class="read-time">2 min read</div>
             </div>
