--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
           <li>
             <a href="">Listen</a>
           </li>
-          
         </ul>
       </nav>
       <span id="account">
@@ -44,19 +43,19 @@
           alt="Master Ace with Bizmarkie Puppet"
         />
         <div>
-          <h4>Old School Rules</h4>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
-            libero doloribus, tenetur nostrum?
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
-            libero doloribus, tenetur nostrum?
-          </p>
+          <h4>If you...</h4>
+          <ul class="if-you">
+            <li>are a fan of Classic Hip Hop music</li>
+            <li>want to find great content about Classic Hip Hop music</li>
+            <li>
+              don't care about the latest news and gossip about current hip hop
+              music
+            </li>
+            <li>
+              have trouble finding relevant content about Classic Hip Hop music
+            </li>
+          </ul>
+          <h4>then this site is for you.</h4>
         </div>
       </section>
       <section class="gradient-accent home">
@@ -67,19 +66,18 @@
       </section>
       <section class="text-image home split">
         <article>
-          <h4>Old School Rules</h4>
+          <h4>What do I mean by Classic Hip Hop?</h4>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
-            libero doloribus, tenetur nostrum?
+            This site will focus on mid 80s thru 90s hip hop music. More
+            generally, 1985-2010 the first 25 years of Hip-Hop when recordings
+            were widely available.
           </p>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
-            libero doloribus, tenetur nostrum?
+            Classic Hip Hop includes these eras: Old School Hip Hop, Golden Age
+            Hip Hop, The East vs. West, G-Funk Era, Shiny Suit/"jiggy",
+            Bling/Crunk Era
           </p>
+          <p>And includes these styles: Boom-Bap, Gangsta Rap, Mafioso Raps</p>
         </article>
         <img
           id="ultra-image"
