home page tweaks

--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@
           <p>
             Classic Hip Hop includes these eras: Old School Hip Hop, Golden Age
             Hip Hop, The East vs. West, G-Funk Era, Shiny Suit/"jiggy",
-            Bling/Crunk Era
+            Bling/Crunk Era and more.
           </p>
-          <p>And includes these styles: Boom-Bap, Gangsta Rap, Mafioso Raps</p>
+          <p>
+            And includes these styles: Boom-Bap, Gangsta Rap, Mafioso Rap and
+            more.
+          </p>
         </article>
         <img
           id="ultra-image"
