home page styles

--- a/index.html
+++ b/index.html
@@ -42,20 +42,25 @@
           src="/images/master-ace-bizmarkie-puppet.jpg"
           alt="Master Ace with Bizmarkie Puppet"
         />
-        <div>
+        <div class="if-you">
           <h4>If you...</h4>
-          <ul class="if-you">
+          <ul class="if-you-list">
             <li>are a fan of Classic Hip Hop music</li>
-            <li>want to find great content about Classic Hip Hop music</li>
+            <li>want to discover great content about Classic Hip Hop music</li>
             <li>
               don't care about the latest news and gossip about current hip hop
               music
             </li>
             <li>
-              have trouble finding relevant content about Classic Hip Hop music
+              have trouble finding relevant content about Classic Hip Hop music in the sea of hip hop content
             </li>
           </ul>
-          <h4>then this site is for you.</h4>
+          <em>then this site is for you.</em>
+
+          <a class="link-button" href="feed.html">Discover Now</a>
+          <!-- <button >Discover Now</button> -->
+          <!-- <button>Start Discovering Now</button> -->
+          <!-- <button>Get Started</button> -->
         </div>
       </section>
       <section class="gradient-accent home">
@@ -74,7 +79,7 @@
           </p>
           <p>
             Classic Hip Hop includes these eras: Old School Hip Hop, Golden Age
-            Hip Hop, The East vs. West, G-Funk Era, Shiny Suit/"jiggy",
+            Hip Hop, The East vs. West, G-Funk Era, Shiny Suit/"jiggy" era,
             Bling/Crunk Era and more.
           </p>
           <p>
