remove commented code

--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
           <li>
             <a href="feed.html">Thoughts</a>
           </li>
-          <!-- <li>
-            <a href="">Watch</a>
-          </li>
-          <li>
-            <a href="">Listen</a>
-          </li> -->
         </ul>
       </nav>
       <span id="account">
@@ -52,7 +46,8 @@
               music
             </li>
             <li>
-              have trouble finding relevant content about Classic Hip Hop music in the sea of hip hop content
+              have trouble finding relevant content about Classic Hip Hop music
+              in the sea of hip hop content
             </li>
           </ul>
           <em>then this site is for you.</em>
