--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p>
             This site will focus on mid 80s thru 90s hip hop music. More
             generally, 1985-2010 the first 25 years of Hip-Hop when recordings
-            were widely available.
+            became widely available.
           </p>
           <p>
             Classic Hip Hop includes these eras: Old School Hip Hop, Golden Age
